--- a/MachineLearning/ML_NET_Example/ML_NET_Example.csproj
+++ b/MachineLearning/ML_NET_Example/ML_NET_Example.csproj
@@ -5,4 +5,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ML" Version="1.5.0-preview2" />
+    <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="1.5.0-preview2" />
+    <PackageReference Include="Microsoft.ML.TensorFlow.Redist" Version="0.14.0" />
+    <PackageReference Include="Microsoft.ML.Vision" Version="1.5.0-preview2" />
+  </ItemGroup>
+
 </Project>
