--- a/MachineLearning/ML_NET_Example_GPU/ML_NET_Example_GPU.csproj
+++ b/MachineLearning/ML_NET_Example_GPU/ML_NET_Example_GPU.csproj
@@ -7,8 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ML" Version="1.5.0-preview2" />
-    <PackageReference Include="Microsoft.ML.TensorFlow.Redist" Version="0.14.0" />
     <PackageReference Include="Microsoft.ML.Vision" Version="1.5.0-preview2" />
+    <PackageReference Include="SciSharp.TensorFlow.Redist-Windows-GPU" Version="1.15.1" />
   </ItemGroup>
 
 </Project>
