--- a/MachineLearning/ML_NET_Example/ML_NET_Example.csproj
+++ b/MachineLearning/ML_NET_Example/ML_NET_Example.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.ML" Version="1.5.0-preview2" />
+    <PackageReference Include="Microsoft.ML" Version="1.6.0" />
     <PackageReference Include="Microsoft.ML.TensorFlow.Redist" Version="0.14.0" />
-    <PackageReference Include="Microsoft.ML.Vision" Version="1.5.0-preview2" />
+    <PackageReference Include="Microsoft.ML.Vision" Version="1.6.0" />
   </ItemGroup>
 
 </Project>
