--- a/MachineLearning/MNIST_Numsharp_CPU/MNIST_Numsharp_CPU.csproj
+++ b/MachineLearning/MNIST_Numsharp_CPU/MNIST_Numsharp_CPU.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NumSharp" Version="0.20.5" />
+    <PackageReference Include="NumSharp" Version="0.30.0" />
+    <PackageReference Include="System.Memory" Version="4.5.5" />
   </ItemGroup>
 
 </Project>
