--- a/MachineLearning/ML_NET_Example_GPU/ML_NET_Example_GPU.csproj
+++ b/MachineLearning/ML_NET_Example_GPU/ML_NET_Example_GPU.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.ML" Version="1.5.0-preview2" />
-    <PackageReference Include="Microsoft.ML.Vision" Version="1.5.0-preview2" />
-    <PackageReference Include="SciSharp.TensorFlow.Redist-Windows-GPU" Version="1.15.1" />
+    <PackageReference Include="Microsoft.ML" Version="1.7.1" />
+    <PackageReference Include="Microsoft.ML.Vision" Version="1.7.1" />
+    <PackageReference Include="SciSharp.TensorFlow.Redist-Windows-GPU" Version="2.7.0" />
   </ItemGroup>
 
 </Project>
